--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ p {
     font-family: fantasy;
     position: absolute;
     top: 10px;
-    right: 30px;
+    left: 550px;
     z-index: 7;
     cursor: pointer;
 }
